# NewVegasWebMonitor

./: .gitignore  README.md  capacitor.config.ts  index.html  manifest.webmanifest  package-lock.json  package.json  registerSW.js  sw.js  vite.config.js
.claude/: settings.json
.github/workflows/: android-apk.yml  deploy.yml  plugin.yml
android/app/: build.gradle
assets/: index-2OX1QQoy.js  index-6Jsx1vRp.js  index-B4SCcATA.js  index-B4cahGHU.css  index-B5zqM00d.js  index-B8qeOXOL.js  index-BALfyyHg.js  index-BEhIA-FT.css  index-BFunVG22.js  index-BJxz8FTy.js  index-BOqoeYs9.css  index-BQDOBk2P.css  index-BRYkLadX.css  index-BbHKisLM.css  index-Bc6UbR9s.js  index-BcW2eho5.js  index-Be3eN57G.css  index-Bfyy-fLS.js  index-BhMtFja3.js  index-Bhif002D.js  index-BmYZRlaO.css  index-Brixa7X7.css  index-C-uC46qt.css  index-C6sXlY_e.css  index-CFfNRBhN.css  index-CJ18Pnx5.js  index-CTC4Hp_0.js  index-CToIdZ7M.js  index-C_SUw7Uk.js  index-Cf7TVT2b.js  index-CgUcvKzX.js  index-Cl9AA73Y.css  index-CnghtopG.css  index-Cnv3JzWY.css  index-CpyhU8oX.css  index-Csbbn03h.css  index-D1WtwRBR.css  index-D3xd406m.js  index-D42MAnyT.css  index-D7TTKzcL.js  (+64 more)
docs/: fnv-websocket-plugin.md
plugin/: CMakeLists.txt  README.md
plugin/src/: cmd_queue.h  exports.def  main.cpp  nvse_min.h  sha1.h  snapshot.h  ws_server.cpp  ws_server.h
public/: fixtures.json
public/icons/pipboy/: manifest.json
scripts/: convert-dds-icons.py  make-placeholder-map.js  mock-server.js
src/: main.js
src/api/websocket/: index.ts  protocol.ts  websocket.ts
src/app/: App.vue
src/app/config/: pageRegistry.ts
src/app/ui/: DemoEditor.vue  PipContent.vue  PipNavigation.vue  SettingsModal.vue  SkyrimContent.vue  SkyrimNavigation.vue  index.ts
src/entities/ui/: index.ts
src/entities/ui/apparel/: ApparelItem.vue  ApparelPreview.vue
src/entities/ui/icons/: index.ts
src/entities/ui/misc/: MiscPreview.vue
src/entities/ui/quest/: QuestItem.vue  QuestPreview.vue  QuestStepIndicator.vue  QuestStepsPreview.vue
src/entities/ui/weapon/: AmmoItem.vue  AmmoPreview.vue  WeaponItem.vue  WeaponPreview.vue
src/features/ui/items/: InventoryList.vue
src/i18n/locales/: en.json  ru.json
src/pages/: index.ts
src/pages/character/: TheStats.vue
src/pages/character/composables/: types.ts  useCharacterStatsDisplay.ts
src/pages/inventory/: TheApparel.vue  TheBooks.vue  TheFood.vue  TheIngredients.vue  TheKeys.vue  TheMisc.vue  ThePotions.vue  TheScrolls.vue  TheWeapons.vue
src/pages/inventory/composables/: useInventoryItemActions.ts
src/pages/map/: MapMarkers.vue  TheMap.vue  index.ts  preloadMap.ts
src/pages/map/composables/: useMapCoordinates.ts  useMapMarkerIcons.ts  useMapProjection.ts  useProjectedMapMarkers.ts
src/pages/radio/: TheRadio.vue
src/shared/lib/composables/: useAppLoader.ts  usePipboyIcons.ts
src/shared/lib/config/: websocket.ts
src/shared/lib/constants/: apparelIcons.ts  weaponIcons.ts
src/shared/lib/styles/: README.md  animations.scss  base.scss  variables.scss
src/shared/lib/types/: types.ts
src/shared/lib/utils/: getDescriptionValues.ts  hotkeyIcons.ts  iconPath.ts
src/shared/ui/base/: AppVersion.vue  ConnectionStatus.vue  DisplayControls.vue  GameStatusBackdrop.vue  HandPicker.vue  PipModal.vue  QuantityPicker.vue  index.ts
src/shared/ui/display/: AttributeRow.vue  StatBar.vue
src/shared/ui/icons/: BaseIcon.vue  PipboyIcon.vue  index.ts
src/shared/ui/items/: BasePreview.vue  EquipStatus.vue  InventoryItem.vue
src/stores/adapters/: dataRouter.ts  typeGuards.ts
src/stores/character/: types.ts  useCharacterStore.ts
src/stores/demo/: demoData.ts  useDemoStore.ts
src/stores/favorites/: useFavoritesStore.ts
src/stores/fixtures/: fixtureLoader.ts
src/stores/hotkeys/: types.ts
src/stores/inventory/: types.ts  useInventoryStore.ts
src/stores/map/: types.ts  useCustomMarkerStore.ts  useMapPlayerStore.ts
src/stores/radio/: useHiddenStationsStore.ts  useRadioStore.ts  useStationPrefsStore.ts
src/stores/settings/: useSettingsStore.ts
src/stores/system/: types.ts  useSystemStore.ts
src/stores/use-navigation-store/: useNavigationStore.ts
src/stores/use-websocket-store/: useWebsocketStore.ts
(+13 files in other folders)
